[gd_scene load_steps=11 format=3]

[ext_resource type="Script" path="res://src/scripts/monster/Monster.gd" id="1"]
[ext_resource type="PackedScene" path="res://src/scenes/Areabox/HurtBox.tscn" id="2"]
[ext_resource type="Script" path="res://src/scripts/data/MonsterStatus.gd" id="3"]
[ext_resource type="Script" path="res://src/scripts/monster/monster_state/combat/Monster_Down.gd" id="4"]
[ext_resource type="Script" path="res://src/scripts/monster/monster_state/combat/Monster_Attack.gd" id="5"]
[ext_resource type="Script" path="res://src/scripts/monster/monster_state/on_ground/Monster_Idle.gd" id="6"]
[ext_resource type="Script" path="res://src/scripts/monster/monster_state/on_ground/Monster_Move.gd" id="7"]
[ext_resource type="Script" path="res://src/scripts/monster/monster_state/combat/Monster_Damage.gd" id="8"]
[ext_resource type="Script" path="res://src/scripts/monster/Monster_StateMachine.gd" id="9"]
[ext_resource type="Script" path="res://src/scripts/monster/monster_state/in_air/Monster_Jump.gd" id="10"]
[ext_resource type="Script" path="res://src/scripts/monster/MonsterHitbox.gd" id="11"]

[node name="Monster" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("9")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("6")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("7")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("10")

[node name="Damage" type="Node" parent="StateMachine"]
script = ExtResource("8")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("5")

[node name="Down" type="Node" parent="StateMachine"]
script = ExtResource("4")

[node name="Stats" type="Node" parent="."]
script = ExtResource("3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Shadow" type="Sprite2D" parent="."]

[node name="BodyPivot" type="Marker2D" parent="."]

[node name="Offset" type="Marker2D" parent="BodyPivot"]

[node name="Body" type="Sprite2D" parent="BodyPivot/Offset"]

[node name="HurtBox" parent="BodyPivot/Offset" instance=ExtResource("2")]
collision_layer = 16
collision_mask = 0

[node name="SightRange" type="Area2D" parent="BodyPivot/Offset"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyPivot/Offset/SightRange"]

[node name="AttackRange" type="Area2D" parent="BodyPivot/Offset"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyPivot/Offset/AttackRange"]

[node name="Hitbox" type="Area2D" parent="BodyPivot/Offset"]
collision_layer = 8
collision_mask = 16
script = ExtResource("11")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyPivot/Offset/Hitbox"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="area_entered" from="BodyPivot/Offset/HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="BodyPivot/Offset/SightRange" to="." method="_on_sight_range_body_entered"]
[connection signal="body_exited" from="BodyPivot/Offset/SightRange" to="." method="_on_sight_range_body_exited"]
[connection signal="body_entered" from="BodyPivot/Offset/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="BodyPivot/Offset/AttackRange" to="." method="_on_attack_range_body_exited"]

[editable path="BodyPivot/Offset/HurtBox"]
